--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,13 @@
     --color3:#920193;
     --color4:#900201;
     --color5:#00719F;
+    --bs-body-color:var(--colorBase);
 
   }
 
 html{
     font-size: 62,5%;
+
 }
 
 /*
@@ -44,12 +46,16 @@ html{
     -webkit-text-fill-color: transparent
 */
 body{
-    background-color:var(--colorBase);
+    background-color:black;
+
    /* background-image: url("../images/back.jpg");
    */
    background-size: cover;
     text-align: center;
     font-style: normal;
+    --bs-body-color:var(--colorBase);
+
+
 }
 
 p, form{
@@ -79,6 +85,10 @@ p, form{
 }
 
 
+.form-contacto{
+    text-align: left;
+
+}
 
 
 .float-right{
@@ -165,6 +175,10 @@ h2{
     font-size: 1.80rem;
 }
 
+.back-color{
+    background-color: black;
+}
+
 .photo-grid{
     justify-content: center;
     display:flex;
@@ -201,7 +215,7 @@ h2{
     flex-direction:column-reverse;
     flex: 1;
     padding: 0.1rem;
-    z-index: 10;
+    z-index: 1;
 }
 .photo-grid-item:hover{
     animation-duration: 3s;
@@ -231,14 +245,7 @@ h2{
     height:100vh;
 
    }
-/*
-.border {
-  /*  border: 1px solid black;*/
-/*
-    background-color: rgb(0, 0, 0);
 
-   }
-   */
 
 header{
     grid-area: header;
@@ -272,11 +279,20 @@ section#smart{
 section#prensa{
     grid-area: prensa;
 }
-nav{
+.nav{
+   
     grid-area: nav;
+    float:initial;
+    position:fixed;
+    text-align: center;
+    z-index: 10;
+    background-color:black;
 }
 
-
+.contenido{
+    padding-top: 10%;
+    background-color: var(--colorBackgroundNav);
+}
 .grid{
     grid-column-gap: 10px;
     grid-row-gap: 10px
